--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  provider: ^6.0.0
+  provider: ^6.0.1
   firebase_core: ^1.6.0
   firebase_auth: ^3.1.1
   cloud_firestore: ^2.5.2
@@ -42,10 +42,26 @@ dependencies:
   google_sign_in: ^5.1.0
   flutter_facebook_auth: ^3.5.1
   firebase_auth_oauth: ^1.0.3
+  get_it: ^7.2.0
+  websafe_svg: ^2.0.0
+  cached_network_image: ^3.1.0
+  flutter_screen_scaler: ^2.0.0
+  easy_localization: ^3.0.0
+  smooth_page_indicator: ^1.0.0+2
+  flutter_native_splash: ^1.2.3
+  shared_preferences: ^2.0.7
+  pin_code_fields: ^7.3.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+flutter_native_splash:
+  color: "#00B9A7"
+  image: "images/splash.png"
+  android: true
+  ios: true
+  web: true
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -66,9 +82,31 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - images/
+    - langs/en.json
+  fonts:
+    - family: SP Pro Display
+      fonts:
+        - asset: fonts/sf_semi_bold.otf
+          weight: 600
+        - asset: fonts/sf_medium.otf
+          weight: 500
+        - asset: fonts/sf_regular.otf
+          weight: 400
+    - family: barlow
+      fonts:
+        - asset: fonts/sf_bold.otf
+          weight: 700
+        - asset: fonts/sf_semi_bold.otf
+          weight: 600
+        - asset: fonts/sf_medium.otf
+          weight: 500
+        - asset: fonts/sf_regular.otf
+          weight: 400
+
+#     - images/a_dot_burr.jpeg
+#     - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -81,17 +119,7 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
