--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   flutter_native_splash: ^1.2.3
   shared_preferences: ^2.0.7
   pin_code_fields: ^7.3.0
+  intl_phone_field: ^2.1.0
+  flutter_google_places: ^0.3.0
 
 
 dev_dependencies:
