--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^5.1.0
   flutter_facebook_auth: ^3.5.1
   firebase_auth_oauth: ^1.0.3
+  image: ^3.0.8
 
 dev_dependencies:
   flutter_test:
