--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   flutter_google_places: ^0.3.0
   another_flushbar: ^1.10.24
   image_picker: ^0.8.4
+  permission_handler: ^8.1.6
+  device_info: ^2.0.2
 
 
 dev_dependencies:
