--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,7 @@ dependencies:
   permission_handler: ^8.1.6
   device_info: ^2.0.2
   sign_in_with_apple: ^3.2.0
+  carousel_slider: ^4.0.0
 
 
 dev_dependencies:
