--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,7 +52,6 @@ dependencies:
   flutter_native_splash: ^1.2.3
   shared_preferences: ^2.0.7
   pin_code_fields: ^7.3.0
-  intl_phone_field: ^2.1.0
   flutter_google_places: ^0.3.0
   another_flushbar: ^1.10.24
   image_picker: ^0.8.4
@@ -61,6 +60,9 @@ dependencies:
   sign_in_with_apple: ^3.2.0
   carousel_slider: ^4.0.0
   shimmer: ^2.0.0
+  country_code_picker: ^2.0.2
+  toggle_switch: ^1.3.0
+  url_launcher: ^6.0.15
 
 
 dev_dependencies:
