--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,7 @@ dependencies:
   carousel_slider: ^4.0.0
   shimmer: ^2.0.0
   contacts_service: ^0.6.3
+  mailer: ^5.0.2
 
 dev_dependencies:
   flutter_test:
