--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -103,6 +103,9 @@
         <key>NSCameraUsageDescription</key>
         <string>MeetMeYou Need This Permission for use camera</string>
 
+        <key>NSMicrophoneUsageDescription</key>
+	    <string>Used to capture audio for image picker plugin</string>
+
         <key>LSApplicationQueriesSchemes</key>
         <array>
           <string>https</string>
