--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,10 +61,10 @@ dependencies:
   carousel_slider: ^4.0.0
   shimmer: ^2.0.0
   country_code_picker: ^2.0.2
-  toggle_switch: ^1.3.0
   url_launcher: ^6.0.15
   contacts_service: ^0.6.3
   mailer: ^5.0.2
+  flutter_switch: ^0.3.2
 
 
 dev_dependencies:
