--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   contacts_service: ^0.6.3
   mailer: ^5.0.2
   flutter_switch: ^0.3.2
+  image_stack: ^2.1.0
 
 
 dev_dependencies:
