working on deep link

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -45,13 +45,11 @@
             </intent-filter>
 
             <!-- Deep linking -->
-            <meta-data android:name="flutter_deeplinking_enabled" android:value="true" />
             <intent-filter android:autoVerify="true">
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:scheme="http" android:host="meetmeyou.com" />
-                <data android:scheme="https" />
+                <data android:scheme="http" android:host="event.meetmeyou.com" />
             </intent-filter>
 
         </activity>
