--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
       ref: main
   share_plus: ^3.0.4
   uni_links: ^0.5.1
+  firebase_dynamic_links: ^4.0.4
 
 dev_dependencies:
   flutter_test:
