--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,7 @@ dependencies:
   share_plus: ^3.0.4
   uni_links: ^0.5.1
   firebase_dynamic_links: ^4.0.4
+  geocoding: ^2.0.2
 
 dev_dependencies:
   flutter_test:
