--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   contacts_service: ^0.6.3
   mailer: ^5.0.2
   device_calendar: ^4.0.1
+  firebase_messaging: ^11.2.6
 
 dev_dependencies:
   flutter_test:
