--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -82,6 +82,8 @@ dependencies:
   firebase_dynamic_links: ^4.0.4
   geocoding: ^2.0.2
   firebase_messaging: ^11.2.6
+  flutter_chat_bubble: ^2.0.0
+  swipe_to: ^0.0.1+8
 
 dev_dependencies:
   flutter_test:
