--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,15 @@ dependencies:
   flutter_chat_bubble: ^2.0.0
   swipe_to: ^0.0.1+8
   async: ^2.8.1
+dependency_overrides:
+    firebase_messaging_platform_interface: 3.1.6
+    firebase_crashlytics_platform_interface: 3.1.13
+    cloud_firestore_platform_interface: 5.4.13
+    firebase_auth_platform_interface: 6.1.11
+    firebase_storage_platform_interface: 4.0.14
+    cloud_functions_platform_interface: 5.0.21
+    firebase_dynamic_links_platform_interface: 0.2.0+5
+
 
 
 dev_dependencies:
