--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,6 +85,7 @@ dependencies:
   flutter_chat_bubble: ^2.0.0
   swipe_to: ^0.0.1+8
   async: ^2.8.1
+  overlay_support: ^1.2.1
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
