--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,7 @@ dependencies:
   swipe_to: ^0.0.1+8
   async: ^2.8.1
   overlay_support: ^1.2.1
+  flutter_local_notifications: ^9.4.0
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
