--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -87,6 +87,7 @@ dependencies:
   async: ^2.8.1
   overlay_support: ^1.2.1
   flutter_local_notifications: ^9.4.0
+  event_bus: ^2.0.0
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
