--- a/ios/Podfile
+++ b/ios/Podfile
@@ -51,7 +51,7 @@ post_install do |installer|
                        'PERMISSION_CONTACTS=1',
 
                        ## dart: PermissionGroup.camera
-                       # 'PERMISSION_CAMERA=1',
+                        'PERMISSION_CAMERA=1',
 
                        ## dart: PermissionGroup.microphone
                        # 'PERMISSION_MICROPHONE=1',
@@ -63,10 +63,10 @@ post_install do |installer|
                        # 'PERMISSION_PHOTOS=1',
 
                        ## dart: [PermissionGroup.location, PermissionGroup.locationAlways, PermissionGroup.locationWhenInUse]
-                       # 'PERMISSION_LOCATION=1',
+                        'PERMISSION_LOCATION=1',
 
                        ## dart: PermissionGroup.notification
-                       # 'PERMISSION_NOTIFICATIONS=1',
+                        'PERMISSION_NOTIFICATIONS=1',
 
                        ## dart: PermissionGroup.mediaLibrary
                        # 'PERMISSION_MEDIA_LIBRARY=1',
