--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   flutter_local_notifications: ^9.4.0
   event_bus: ^2.0.0
   image_cropper: any
+  photo_view: ^0.13.0
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
