--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -104,6 +104,8 @@
         <key>NSMicrophoneUsageDescription</key>
 	    <string>Used to capture audio for image picker plugin</string>
 
+        <key>NSPhotoLibraryAddUsageDescription</key>
+	    <string></string>
 
         <key>LSApplicationQueriesSchemes</key>
         <array>
