--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -90,6 +90,8 @@ dependencies:
   event_bus: ^2.0.0
   image_cropper: any
   photo_view: ^0.13.0
+  image_gallery_saver: ^1.7.1
+  dio: ^4.0.6
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
