--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -131,5 +131,7 @@
             <string>googlechromes</string>
             <string>comgooglemaps</string>
         </array>
- </dict>
+ 	<key>CADisableMinimumFrameDurationOnPhone</key>
+	<true/>
+</dict>
 </plist>
