--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   photo_view: ^0.13.0
   image_gallery_saver: ^1.7.1
   dio: ^4.0.6
+  flutter_screenutil: ^5.5.3+2
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
