--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -133,5 +133,22 @@
         </array>
  	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
+
+	<key>FlutterDeepLinkingEnabled</key>
+    <true/>
+    <key>CFBundleURLTypes</key>
+    <array>
+        <dict>
+        <key>CFBundleTypeRole</key>
+        <string>Editor</string>
+        <key>CFBundleURLName</key>
+        <string>flutterbooksample.com</string>
+        <key>CFBundleURLSchemes</key>
+        <array>
+        <string>http</string>
+        </array>
+        </dict>
+    </array>
+
 </dict>
 </plist>
