--- a/ios/Runner/Runner.entitlements
+++ b/ios/Runner/Runner.entitlements
@@ -8,7 +8,7 @@
 	</array>
 	<key>com.apple.developer.associated-domains</key>
 	<array>
-		<string>applinks:meetmeyou.page.link</string>
+		<string>applinks:meetmeyou.com</string>
 	</array>
 </dict>
 </plist>
