complete new sprint invite changes and some issues

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -124,5 +124,12 @@
  	<key>CADisableMinimumFrameDurationOnPhone</key>
 	<true/>
 
+<key>LSApplicationQueriesSchemes</key>
+<array>
+  <string>sms</string>
+  <string>tel</string>
+  <string>googlegmail</string>
+</array>
+
 </dict>
 </plist>
