--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,7 @@ dependencies:
   device_calendar: ^4.0.1
   firebase_messaging: ^11.2.6
   async: ^2.8.2
+  timezone: ^0.8.0
 
 
 dev_dependencies:
