--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   dio: ^4.0.6
   flutter_screenutil: ^5.5.3+2
   timezone: ^0.8.0
+  flutter_toggle_tab: ^1.2.0
 dependency_overrides:
     firebase_messaging_platform_interface: 3.1.6
     firebase_crashlytics_platform_interface: 3.1.13
