--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,6 +96,7 @@ dependencies:
   timezone: ^0.8.0
   flutter_toggle_tab: ^1.2.0
   video_player: ^2.4.7
+  chewie: ^1.3.5
 dependency_overrides:
     firebase_messaging_platform_interface: 4.1.4
     firebase_crashlytics_platform_interface: 3.2.16
