--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,7 @@ dependencies:
   flutter_toggle_tab: ^1.2.0
   video_player: ^2.4.7
   chewie: ^1.3.5
+  gallery_saver: ^2.3.2
 dependency_overrides:
     firebase_messaging_platform_interface: 4.1.4
     firebase_crashlytics_platform_interface: 3.2.16
