--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
 org.gradle.jvmargs=-Xmx1536M
 android.useAndroidX=true
 android.enableJetifier=true
-org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/jdk/Contents/Home
-android.enableR8=true
+#org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/jdk/Contents/Home
+#android.enableR8=true
